# casper-agentic-mesh

./: .gitignore  AST_HYPERGRAPH.md  Cargo.toml  DEMO_VIDEO.md  DEPLOYMENTS.md  LAUNCH.md  README.md  VISION.md  generate_hypergraph.py  run_demo.sh
.github/workflows/: ci.yml
contracts/: patch_wasm.py
contracts/casper-mesh-contract/: Cargo.toml  escrow_casper_ready.wasm
contracts/casper-mesh-contract/src/: lib.rs
contracts/casper_escrow/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
contracts/casper_escrow/src/: escrow.rs  lib.rs  liquidator.rs
contracts/deposit-proxy/: Cargo.toml  deposit_proxy_ready.wasm
contracts/deposit-proxy/src/: lib.rs
contracts/oracle-contract/: Cargo.toml  oracle_ready.wasm
contracts/oracle-contract/.cargo/: config.toml
contracts/oracle-contract/src/: lib.rs
gateway/: package-lock.json  package.json
gateway/src/__tests__/: core.test.ts
gateway/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
gateway/src/app/api/bounties/: route.ts
gateway/src/app/api/hire/: route.ts
gateway/src/app/api/mcp/: route.ts
gateway/src/app/api/onchain/: route.ts
gateway/src/app/api/orchestrator/v1/bounties/: route.ts
gateway/src/app/api/tower/: route.ts
gateway/src/app/api/tower/stream/: route.ts
gateway/src/app/api/tribunal/: route.ts
gateway/src/app/bounties/: page.tsx
gateway/src/app/dashboard/: page.tsx
gateway/src/components/: AgentDashboard.tsx  AgentNetworkGrid.tsx  AgentOrb.tsx  CarbonFabric.tsx  CursorAura.tsx  CustomCursor.tsx  FPSCounter.tsx  FloatingModules.tsx  FluidBackground.tsx  Footer.tsx  GlitchText.tsx  GlitchWormProgress.tsx  HollywoodTelemetry.tsx  LiquidGlassShader.tsx  MeshControl.tsx  Nav.tsx  SmoothScroller.tsx  SystemWidget.tsx
gateway/src/lib/: agent_registry.ts  agents.ts  casper-transactor.ts  casper.ts  onchain.ts  pay.ts  replay-guard.ts  security.ts  spending-policy.ts  xrpl-transactor.ts
gateway/src/types/: global.d.ts
swarm/bounty-judge/: Cargo.toml
swarm/bounty-judge/src/: main.rs
swarm/casper-client/: Cargo.toml
swarm/casper-client/go-signer/: go.mod  go.sum  main.go  print_key.go
swarm/casper-client/src/: lib.rs  main.rs
swarm/core-ipc/src/: lib.rs
swarm/rwa-oracle/: Cargo.toml
swarm/rwa-oracle/src/: main.rs
swarm/swarm-engine/: Cargo.toml
swarm/swarm-engine/src/: main.rs
swarm/tower/: Cargo.toml
swarm/tower/src/: main.rs
swarm/tribunal/: Cargo.toml
swarm/tribunal/src/: main.rs
swarm/x402-consensus/src/: network.rs
swarm/x402-liquidator/: Cargo.toml
swarm/x402-liquidator/src/: engine.rs  network.rs
swarm/x402-risk/: Cargo.toml
swarm/x402-risk/src/: network.rs
swarm/x402-sniper/: Cargo.toml
swarm/x402-sniper/src/: bounty.rs  engine.rs  network.rs
