[package]
name = "x402-risk"
version = "0.1.0"
edition = "2024"
description = "Kelly sizing, KillSwitch, ATR stops, BucketCap risk management"

[dependencies]
core-ipc = { path = "../core-ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
