[package]
name = "x402-sniper"
version = "0.1.0"
edition = "2024"
description = "DEX execution + x402 bounty protocol client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

url = "2"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
core-ipc = { path = "../core-ipc" }
